# trustget

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PUSH_INSTRUCTIONS.md  README.md  READY_TO_RELEASE.md  RELEASE_READY.md  RELEASE_v0.2.0.md  app.md  pyproject.toml
.github/workflows/: ci.yml  debian-package.yml  pypi-release.yml
debian/: changelog  control  copyright  install  rules  trustget.1
docs/: DISTRIBUTION.md  INSTALL.md  RELEASE.md  architecture.md  trust-scoring.md
scripts/: build-deb.sh  quick-push.sh  release-v0.2.0.sh  release.sh
tests/: conftest.py
tests/integration/: test_downloader.py
tests/unit/: test_scanner.py  test_trust.py  test_utils.py  test_verifier.py
trustget/: __init__.py  cli.py  downloader.py  github.py  reporter.py  scanner.py  trust.py  utils.py  verifier.py
