[project]
name = "trustget"
version = "0.1.0"
description = "wget yang punya otak keamanan — download + verify + trust analysis"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
  {name = "TrustGet Team", email = "trustget@example.com"}
]
keywords = ["download", "security", "verification", "checksum", "wget"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.28",
  "rich>=13.0",
  "click>=8.0",
  "python-gnupg>=0.5",
  "platformdirs>=3.0",
]

[project.scripts]
sg = "trustget.cli:cli"
trustget = "trustget.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-httpserver>=1.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
  "pre-commit>=3.0",
  "build>=1.0.0",
  "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/FaturRachmann/trustget"
Repository = "https://github.com/FaturRachmann/trustget"
Issues = "https://github.com/FaturRachmann/trustget/issues"
Changelog = "https://github.com/FaturRachmann/trustget/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trustget"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["trustget"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=trustget --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["trustget"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
